# fixed9

./: .gitignore  fixed9.cabal
Data/: C_API.hs  Fixed9.hs
benchmark/: Main.hs
benchmark/Data/: Fixed9BM.hs
cbits/: fixed9.c
include/: fixed9.h
tests/: TestSuite.hs
tests/Data/: Fixed9Tests.hs
