name:                fixed9
version:             0.0.1.0
author:              Joshua Montgomery
maintainer:          josh1s4live@gmail.com
build-type:          Simple
cabal-version:       >= 1.10

library
  default-language: Haskell2010
  ghc-options:      -Wall -fwarn-tabs -funbox-strict-fields -fno-warn-unused-do-bind -O2
  ghc-prof-options: -fprof-auto

  exposed-modules:
    Data.Fixed9

  other-modules:
    Data.C_API

  build-depends:
    base                    >= 4.9   && < 4.13,
    deepseq                 >= 1.4.2 && < 1.5,
    ghc-prim                >= 0.5   && < 0.6,
    hashable                >= 1.2   && < 1.3,
    primitive               >= 0.6   && < 0.7,
    text-show               >= 3.4   && < 3.8,
    vector                  >= 0.11  && < 0.13

  default-extensions:
    BangPatterns
    OverloadedStrings

  c-sources: cbits/fixed9.c
  include-dirs: include
  includes: fixed9.h
  install-includes: fixed9.h

test-suite fixed9-tests
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  default-language: Haskell2010
  ghc-options: -threaded

  default-extensions:
    BangPatterns
    OverloadedStrings

  other-modules:
    Data.Fixed9Tests

  build-depends:
    base                       >= 4.8  && < 4.13,
    fixed9,
    HUnit                      >= 1.3  && < 1.7,
    QuickCheck                 >= 2.8  && < 2.13

  c-sources: cbits/fixed9.c
  include-dirs: include
  includes: fixed9.h

benchmark bench-fixed9
  hs-source-dirs: benchmark
  type: exitcode-stdio-1.0
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -threaded -O2
  ghc-prof-options: -fprof-auto "-with-rtsopts= -p"

  default-extensions:
    BangPatterns
    OverloadedStrings

  other-modules:
    Data.Fixed9BM

  build-depends:
    base                       >= 4.8    && < 4.13,
    criterion                  >= 1.2    && < 1.6,
    fixed9

  c-sources: cbits/fixed9.c
  include-dirs: include
  includes: fixed9.h
